Update install directions

--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -7,31 +7,11 @@ import TabItem from '@theme/TabItem';
 
 # Installation
 
-1. Create an empty game template, substituing `[game-name]` with the name of your game.
-
-<Tabs>
-<TabItem value="npm" label="npm">
+1. Create an starter game template by running the following command. It will guide you through setting up your game.
 
 ```console
-npx @boardzilla/create-game [game-name]
+npx @boardzilla/create-game
 ```
-
-</TabItem>
-<TabItem value="yarn" label="yarn">
-
-```console
-npx @boardzilla/create-game [game-name] -i yarn
-```
-
-</TabItem>
-<TabItem value="pnpm" label="pnpm">
-
-```console
-npx @boardzilla/create-game [game-name] -i pnpm
-```
-
-</TabItem>
-</Tabs>
 
 2. Change into your newly created directory using `cd [game-name]`.
 3. Run `npm run dev` to start development.
