faq toc, windows, effects changes

--- a/docs/faq/index.mdx
+++ b/docs/faq/index.mdx
@@ -1,4 +1,13 @@
+---
+toc_min_heading_level: 1
+toc_max_heading_level: 1
+---
+
+import TOCInline from '@theme/TOCInline';
+
 # FAQ
+
+<TOCInline toc={toc} />
 
 ## Who owns my games?
 
