--- a/docs/introduction/create-a-game.mdx
+++ b/docs/introduction/create-a-game.mdx
@@ -2,12 +2,29 @@
 sidebar_position: 3
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+
 # Creating your first game
 
 Once you've installed the devtools and Node 18 or high, you're ready to create your first game. To do so, run the following:
 
+<Tabs>
+<TabItem value="Mac OS/Linux" label="Mac OS/Linux">
+
 ```console
 bz new
 ```
+
+</TabItem>
+<TabItem value="Windows" label="Windows">
+
+```console
+bz.exe new
+```
+
+</TabItem>
+</Tabs>
 
 You'll be guided through a series of prompts. One of the choices you'll be prompted with is which game template you'd like to use. The **[simple template](https://github.com/boardzilla/boardzilla-starter-game)** gives you a very basic game to edit right away. The **[empty template](https://github.com/boardzilla/boardzilla-empty-game)** gives you a completely empty game to use. If this is your first time making a game, the simple template is probably best as it gives you a working example to play with.
