--- a/docs/faq/index.mdx
+++ b/docs/faq/index.mdx
@@ -1,6 +1,6 @@
 ---
-toc_min_heading_level: 1
-toc_max_heading_level: 1
+toc_min_heading_level: 2
+toc_max_heading_level: 2
 ---
 
 import TOCInline from '@theme/TOCInline';
@@ -9,22 +9,22 @@ import TOCInline from '@theme/TOCInline';
 
 <TOCInline toc={toc} />
 
-## Who owns my games?
+### Who owns my games?
 
 You do! You own the copyright for any game you make.
 
-## If I make my game available on boardzilla.io, do I need publish the source as well?
+### If I make my game available on boardzilla.io, do I need publish the source as well?
 
 If your game uses the `@boardzilla/core` library you do not need to publish the game source code. However, if you're using other libraries which require you to publish the source code, you'll need to comply with those.
 
-## Can I monetize my game?
+### Can I monetize my game?
 
 You can do anything the AGPL provides, including monetizing it however you'd like. For an overview of your rights under the AGPL license, take a look at https://choosealicense.com/licenses/agpl-3.0/.
 
-## What If I want to monetize my game but not publish the source code?
+### What If I want to monetize my game but not publish the source code?
 
 You probably want a different license other than the AGPL. Please contact us at info@boardzilla.io to arrange for an alternate license. As well, we're planning to offer a way to monetize games on boardzilla.io.
 
-## What if i want to improve `@boardzilla/core` on my own?
+### What if i want to improve `@boardzilla/core` on my own?
 
 We welcome any issues or pull requests at https://github.com/boardzilla/boardzilla-core. Details about contributing can be found at https://github.com/boardzilla/boardzilla-core/blob/main/CONTRIBUTING.md.
