--- a/docs/faq/index.mdx
+++ b/docs/faq/index.mdx
@@ -3,11 +3,15 @@ toc_min_heading_level: 2
 toc_max_heading_level: 2
 ---
 
-import TOCInline from '@theme/TOCInline';
+import TOCInline from "@theme/TOCInline";
+
+<TOCInline toc={toc} />
 
 # FAQ
 
-<TOCInline toc={toc} />
+### Is this an open-source project? Or a commercial project?
+
+Yes (to both)! The core library and devtools are both licensed under the AGPLv3. As well, we offer commercial licenses. This is to enable the use of Boardzilla for publishing games where publishing the source-code might not be desirable. For more information about obtaining a commercial license, please contact us at info@boardzilla.io.
 
 ### Who owns my games?
 
@@ -24,6 +28,10 @@ You can do anything the AGPL provides, including monetizing it however you'd lik
 ### What If I want to monetize my game but not publish the source code?
 
 You probably want a different license other than the AGPL. Please contact us at info@boardzilla.io to arrange for an alternate license. As well, we're planning to offer a way to monetize games on boardzilla.io.
+
+### Wait, are you going to sell my games?
+
+We can't sell your games without your permission. But in the event that we do launch a marketplace for games, and you want to be a part of that, we would need to work out a revenue sharing model with you that you agree to before making your games available on such a marketplace.
 
 ### What if i want to improve `@boardzilla/core` on my own?
 
