doc updates for core 0.0.99

--- a/docs/ui/css.mdx
+++ b/docs/ui/css.mdx
@@ -154,6 +154,7 @@ and are useful for targetting to customize appearance:
 - `selectable` If this element is currently selectable in an available action
 - `droppable` If this element is a valid drop zone for a dragged element
 - `clickable` If this element is clickable for any reason
+- `invalid` If this element is an invalid selection due to a `validate` rule
 
 The properties you give to your Space/Piece class, as well as built-in
 properties like `name` and `player` are also added to the HTML element as `data-`
