--- a/docs/ui/css.mdx
+++ b/docs/ui/css.mdx
@@ -127,10 +127,10 @@ customized by changing `background-image`
 
 ### #play-area
 
-The Board is rendered here, as opposed to any player controls or informational
-text. Use this in case of CSS selectors that must be scoped to the board
-only. Remember that elements can appear in modals so element CSS should not be
-restricted to `#play-area`.
+The playing area is rendered here, as opposed to any player controls or
+informational text. Use this in case of CSS selectors that must be scoped to the
+board only. Remember that elements can appear in modals so element CSS should
+not be restricted to `#play-area`.
 
 ### .transform-wrapper
 
